--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start" : "parcel public/index.html --open",
-    "build" : "parcel build public/index.html"
+    "build" : "parcel build public/index.html --dist-dir ./docs --public-utl /20-hogwarts2/"
   },
   "repository": {
     "type": "git",
